Fix h4 spacing in footer

--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -23,7 +23,7 @@ body.sticky-footer {
 		color: #fff;
 	}
 	h4 {
-		margin-top: 1.2em;
+		margin-top: 1em;
 	}
 	th {
 		padding-top: 0;
